# MGARDx

./: CMakeLists.txt  MGARDxConfig.cmake.in
include/: HuffmanEncoder.hpp  IntegerQuantizer.hpp  adaptive.hpp  data_enc.hpp  data_enc_opt.hpp  decompose.hpp  error_est.hpp  recompose.hpp  refactor.hpp  utils.hpp
test/: CMakeLists.txt  test_compress_decompress.cpp
zstd/: CMakeLists.txt
